[gd_scene load_steps=2 format=3 uid="uid://d0do0ms3g0pkc"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_c0v5q"]

[node name="UI" type="PanelContainer"]
offset_right = 172.0
offset_bottom = 131.0
script = ExtResource("1_c0v5q")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Speed: "

[node name="DirectionLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Direction:
"

[node name="FPSLabel" type="Label" parent="Container"]
layout_mode = 2
text = "FPS: "

[node name="Zoom" type="Label" parent="Container"]
layout_mode = 2
text = "Zoom:"

[node name="MousePosition" type="Label" parent="Container"]
layout_mode = 2
text = "Mouse:"
